Upvote button when voted moved slighty to the right to avoid overlapping

--- a/root-khet/webapp/src/main/webapp/resources/css/product-item.css
+++ b/root-khet/webapp/src/main/webapp/resources/css/product-item.css
@@ -101,6 +101,8 @@
 .upvote-btn.voted {
 	background-color: #F64763;
 	border-color: #F64763;
+	position: relative;
+	left: 27px;
 }
 
 .upvote-btn.voted p {
